# sockrustet

./: Cargo.toml  Dockerfile  docker-compose.yml
.github/workflows/: docker-publish.yml
benchmarks/: k6-test.js
src/: broadcast.rs  main.rs
