[package]
name = "sockrustet"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
pretty_env_logger = "0.4"
tokio-stream = "0.1"
dotenv = "0.15"
# Added for performance
dashmap = "5.4.0"  # Lock-free concurrent HashMap
bytes = "1.4.0"    # Efficient byte buffer manipulation
once_cell = "1.18.0" # Lazy statics with better performance
parking_lot = "0.12.1" # More performant locks than std
# Added for debugging (optional)
console-subscriber = { version = "0.1.10", optional = true }

[features]
tokio-console = ["console-subscriber"]

[profile.release]
# Optimization flags
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
