[package]
name = "sockrustet"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
pretty_env_logger = "0.4"
tokio-stream = "0.1"
dotenv = "0.15"
# Added for performance
dashmap = "5.4.0"  # Lock-free concurrent HashMap
bytes = "1.4.0"    # Efficient byte buffer manipulation
once_cell = "1.18.0" # Lazy statics with better performance
parking_lot = "0.12.1" # More performant locks than std
# Added for debugging (optional)
console-subscriber = { version = "0.1.10", optional = true }
# Additional high-performance dependencies
ahash = "0.8.3"  # Faster hash algorithm
fxhash = "0.2.1" # Even faster non-cryptographic hashing
rayon = "1.7.0"  # Parallel processing
mimalloc = { version = "0.1.37", default-features = false } # High-performance allocator
flume = "0.10.14" # Better channel performance for many producers

[features]
tokio-console = ["console-subscriber"]

[profile.release]
# Optimization flags
opt-level = 3
lto = "fat"  # More aggressive link-time optimization
codegen-units = 1
panic = "abort"
strip = true
# Additional optimization flags
debug = false
rpath = false
overflow-checks = false
incremental = false
