[package]
name = "sockrustet"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
bytes = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
dashmap = "5.4"
once_cell = "1.18"
flume = "0.11"
fxhash = "0.2"
mimalloc = { version = "0.1", default-features = false }
dotenv = "0.15"
tokio-stream = "0.1"
# Add missing dependencies for logging
log = "0.4"
env_logger = "0.11.7"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
